# wsclicker-rs

./: Cargo.toml  index.html
src/: app.rs  lib.rs  main.rs
