[package]
name = "wsclicker-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.29"
eframe = { version = "0.29", features = ["default_fonts", "glow"], default-features = false }
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"

[profile.release]
opt-level = 2
